--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   },
   "dependencies": {
     "@adobe/pdfservices-node-sdk": "^4.1.0",
+    "@ai-sdk/google": "^1.0.16",
+    "@ai-sdk/openai": "^1.0.19",
     "@langchain/community": "^0.3.24",
     "@langchain/core": "^0.3.30",
     "@langchain/google-genai": "^0.1.6",
     "@opendocsg/pdf2md": "^0.2.1",
     "@types/turndown": "^5.0.5",
+    "ai": "^4.0.38",
     "cheerio": "^1.0.0",
+    "jimp": "^1.6.0",
     "next": "15.1.4",
     "node-html-markdown": "^1.3.0",
     "pdf-parse": "^1.1.1",
     "puppeteer": "^24.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tesseract.js": "^4.1.1",
     "turndown": "^7.2.0",
     "zod": "^3.24.1"
   },
