--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@langchain/core": "^0.3.30",
     "@langchain/google-genai": "^0.1.6",
     "@opendocsg/pdf2md": "^0.2.1",
+    "@types/puppeteer": "^7.0.4",
     "@types/turndown": "^5.0.5",
     "ai": "^4.0.38",
+    "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "jimp": "^1.6.0",
     "next": "15.1.4",
     "node-html-markdown": "^1.3.0",
     "pdf-parse": "^1.1.1",
     "puppeteer": "^24.1.0",
+    "puppeteer-core": "^24.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tesseract.js": "^4.1.1",
