--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@opendocsg/pdf2md": "^0.2.1",
     "@types/puppeteer": "^7.0.4",
     "@types/turndown": "^5.0.5",
+    "@zanixongroup/pinterest-scraper": "^1.0.3",
     "ai": "^4.0.38",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
