--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@adobe/pdfservices-node-sdk": "^4.1.0",
     "@ai-sdk/google": "^1.0.16",
     "@ai-sdk/openai": "^1.0.19",
-    "@langchain/community": "^0.3.24",
-    "@langchain/core": "^0.3.30",
+    "@langchain/community": "^0.3.27",
+    "@langchain/core": "^0.3.36",
     "@langchain/google-genai": "^0.1.6",
     "@opendocsg/pdf2md": "^0.2.1",
     "@types/puppeteer": "^7.0.4",
@@ -23,6 +23,7 @@
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "jimp": "^1.6.0",
+    "mammoth": "^1.9.0",
     "next": "15.1.4",
     "node-html-markdown": "^1.3.0",
     "pdf-parse": "^1.1.1",
